--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <header>
   <h1> Sami Chbicheb </h1>
+  <img src="photo.jpg" height="300px" width="250px" />
   <h2> Code: 4 </h2>
   <h2> Graphisme 6 </h2>
   <h2> Orthographe: 9 </h2>
@@ -11,6 +12,7 @@
   Je souhaiterais m'améliorer en programmation</br>
   Je n'ai pas de soucis avec l'orthographe</br>
   mon jeu préféré est Metal gear Solid</p>
+..
 
 </body>
 </html>
